<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>GemsFXParent</name>
    <groupId>com.dlsc.gemsfx</groupId>
    <artifactId>parent</artifactId>
    <version>3.2.1</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.dlsc</groupId>
        <artifactId>dlsc-maven-parent</artifactId>
        <version>1.5.0</version>
    </parent>

    <modules>
        <module>gemsfx</module>
        <module>gemsfx-demo</module>
    </modules>

    <description>Parent project of GemsFX
    </description>

    <url>https://github.com/dlemmermann/GemsFX</url>
    <licenses>
        <license>
            <name>Apache 2.0</name>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Dirk Lemmermann</name>
            <email>dlemmermann@gmail.com</email>
            <organization>DLSC Software &amp; Consulting GmbH</organization>
            <url>https://www.dlsc.com</url>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/dlsc-software-consulting-gmbh/GemsFX</url>
    </scm>

    <properties>
        <project.identifier>gemsfx</project.identifier>
        <project.github.repository>dlsc-software-consulting-gmbh/GemsFX</project.github.repository>
        <local.repository.path>/tmp/repository</local.repository.path>
        <java.version>21</java.version>
        <javafx.version>23</javafx.version>
        <ikonli.version>12.4.0</ikonli.version>
        <sonar.projectKey>dlsc-software-consulting-gmbh_GemsFX</sonar.projectKey>
        <sonar.organization>dlsc-software-consulting-gmbh</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <asciidoctor.maven.plugin.version>1.6.0</asciidoctor.maven.plugin.version>
        <asciidoctorj.version>1.6.2</asciidoctorj.version>
        <jruby.version>9.2.6.0</jruby.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.dlsc.gemsfx</groupId>
                <artifactId>gemsfx</artifactId>
                <version>${project.parent.version}</version>
            </dependency>

            <dependency>
                <groupId>com.dlsc.pdfviewfx</groupId>
                <artifactId>pdfviewfx</artifactId>
                <version>3.0.0</version>
            </dependency>

            <dependency>
                <groupId>one.jpro.platform</groupId>
                <artifactId>jpro-mdfx</artifactId>
                <version>0.5.0</version>
            </dependency>

            <dependency>
                <groupId>one.jpro.platform</groupId>
                <artifactId>jpro-utils</artifactId>
                <version>0.5.0</version>
            </dependency>

            <dependency>
                <groupId>net.synedra</groupId>
                <artifactId>validatorfx</artifactId>
                <version>0.5.0</version>
            </dependency>

            <dependency>
                <groupId>com.dlsc.unitfx</groupId>
                <artifactId>unitfx</artifactId>
                <version>1.0.10</version>
            </dependency>

            <dependency>
                <groupId>com.dlsc.pickerfx</groupId>
                <artifactId>pickerfx</artifactId>
                <version>1.3.1</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.13.0</version>
            </dependency>

            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.8.0</version>
            </dependency>

            <dependency>
                <groupId>org.controlsfx</groupId>
                <artifactId>controlsfx</artifactId>
                <version>11.1.2</version>
            </dependency>

            <dependency>
                <groupId>javax.measure</groupId>
                <artifactId>unit-api</artifactId>
                <version>2.1.2</version>
            </dependency>

            <dependency>
                <groupId>com.github.weisj</groupId>
                <artifactId>jsvg</artifactId>
                <version>1.2.0</version>
            </dependency>

            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.3.0</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-media</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-core</artifactId>
                <version>${ikonli.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-javafx</artifactId>
                <version>${ikonli.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-materialdesign-pack</artifactId>
                <version>${ikonli.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-material-pack</artifactId>
                <version>${ikonli.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-bootstrapicons-pack</artifactId>
                <version>${ikonli.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>24.1.0</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <failOnError>false</failOnError>
                    <force>true</force>
                    <windowtitle>GemsFX API</windowtitle>
                    <additionalJOption>-J-Djavafx.javadoc=true
                    </additionalJOption>
                    <docfilessubdirs>true</docfilessubdirs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-docs
                        </id> <!-- this is used for inheritance merges -->
                        <phase>package
                        </phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
